# Agent365-samples

./: .gitignore  CONTRIBUTING.md  README.md
.github/: CODEOWNERS  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-award-points.yml  auto-version-nodejs-samples.yml  ci-dotnet-agentframework-sampleagent.yml  ci-dotnet-semantickernel-sampleagent.yml  ci-nodejs-claude-sampleagent.yml  ci-nodejs-langchain-sampleagent.yml  ci-nodejs-openai-sampleagent.yml  ci-nodejs-vercelsdk-sampleagent.yml  ci-python-agentframework-sampleagent.yml  ci-python-googleadk-sampleagent.yml  ci-python-openai-sampleagent.yml  docker-container-sampleagent-python.yml  main.yml  points.yml  python-claude-sample.yml  update-leaderboard.yml
community/adner/Agent365_Notifications/: .gitignore  AgentFrameworkNotificationAgent.sln  README.md
community/adner/Agent365_Notifications/notification-agent/: .gitignore  AgentFrameworkNotificationAgent.csproj  AspNetExtensions.cs  Program.cs  ToolingManifest.json  appsettings.json
dotnet/AspireOTelServiceDefaults/: AgentOTELExtensions.cs
dotnet/agent-framework/: AgentFrameworkSample.sln  nuget.config
dotnet/agent-framework/sample-agent/: AgentFrameworkSampleAgent.csproj  AspNetExtensions.cs  Program.cs  README.md  ToolingManifest.json  appsettings.Playground.json  appsettings.json
dotnet/agent-framework/sample-agent/Agent/: MyAgent.cs  WeatherAgent.cs
dotnet/agent-framework/sample-agent/Tools/: DateTimeFunctionTool.cs  WeatherLookupTool.cs
dotnet/agent-framework/sample-agent/appPackage/: manifest.json
dotnet/agent-framework/sample-agent/telemetry/: A365OtelWrapper.cs  AgentMetrics.cs  AgentOTELExtensions.cs
dotnet/azure-ai-foundry/: AzureAIFoundrySampleAgent.sln
dotnet/azure-ai-foundry/sample-agent/: .gitignore  Agent-Code-Walkthrough.md  AspNetExtensions.cs  AzureAIFoundrySampleAgent.csproj  Program.cs  README.md  ToolingManifest.json  appsettings.json
dotnet/copilot-studio/relay-agent/: .gitignore  AgenticRelayExample.sln  README.md  appsettings.json
dotnet/semantic-kernel/: SemanticKernelSampleAgent.sln  nuget.config
dotnet/semantic-kernel/sample-agent/: .gitignore  AgentMetrics.cs  AspNetExtensions.cs  MyAgent.cs  Program.cs  README.md  Sample Agent - Semantic Kernel.md  SemanticKernelSampleAgent.csproj  ToolingManifest.json  appsettings.json
gamification/: .gitignore  LEADERBOARD.md  README.md
gamification/database/: schema.sql
gamification/python/: database.py  gamification.db  generate_leaderboard_md.py  manage_points.py  points_service.py  update_readme.py
nodejs/claude/quickstart-before/: README.md  package-lock.json  package.json  tsconfig.json
nodejs/claude/sample-agent/: .env.template  AGENT-CODE-WALKTHROUGH.md  README.md  Sample Agent - Claude.md  ToolingManifest.json  env.TEMPLATE  package-lock.json  package.json  preinstall-local-packages.js  reviewed_contract.docx  test-models.js  tsconfig.json
nodejs/devin/: .env.example
nodejs/devin/sample-agent/: .env.example  README.md  Sample Agent - Devin.md  package.json
nodejs/devin/src/: agent.ts  devin-client.ts  utils.ts
nodejs/langchain/quickstart-before/: .env.example  Agent-Code-Walkthrough.md  Quickstart - LangChain.md  README.md  ToolingManifest.json  package-lock.json  package.json
nodejs/langchain/sample-agent/: .env.example  Agent-Code-Walkthrough.md  README.md  Sample Agent - LangChain.md  ToolingManifest.json  package.json  tsconfig.json
nodejs/n8n/sample-agent/: .env.template  Agent-Code-Walkthrough.MD  README.md  Sample Agent - n8n.md  package.json
nodejs/openai/sample-agent/: .env.template  AGENT-CODE-WALKTHROUGH.md  README.md  Sample Agent - OpenAI.md  ToolingManifest.json  package.json  preinstall-local-packages.js  tsconfig.json
nodejs/perplexity/: .env.example  README.md  TROUBLESHOOTING.md  package.json
nodejs/perplexity/quickstart-playground/: package.json
nodejs/perplexity/sample-agent/: .env.example  .env.template  README.md  package-lock.json  package.json  tsconfig.json
nodejs/perplexity/src/: agent.ts  index.ts  perplexityAgent.ts  perplexityClient.ts  telemetry.ts
nodejs/vercel-sdk/sample-agent/: .env.example  README.md  Sample Agent - Vercel AI SDK.md  package.json
prompts/: Cursor IDE Prompt.md
python/: PARITY_ANALYSIS.md
python/agent-framework/sample-agent/: .env.template  AGENT-CODE-WALKTHROUGH.md  AGENT-TESTING.md  APPLICATION_INSIGHTS.md  Dockerfile  MockAcitivity.json  README.md  SETUP-GUIDE-Unofficial.md  SETUP-GUIDE.md  Sample Agent - Agent Framework.md  ToolingManifest.json  agent.py  agent_interface.py  docker-compose.yml  host_agent_server.py  main.py  pyproject.toml
python/claude/sample-agent/: .env.template  AGENT-CODE-WALKTHROUGH.md  NOTIFICATION_SUPPORT_CHANGES.md  README.md  agent.py  agent_interface.py  host_agent_server.py  local_authentication_options.py  observability_helpers.py  pyproject.toml  start_with_generic_host.py  token_cache.py
python/crewai/sample_agent/: .env.template  README.md  ToolingManifest.json  agent.py  agent_interface.py  host_agent_server.py  local_authentication_options.py  mcp_tool_registration_service.py  pyproject.toml  start_with_generic_host.py  token_cache.py
python/crewai/sample_agent/src/crew_agent/: agent_runner.py  crew.py  main.py
python/crewai/sample_agent/src/crew_agent/config/: agents.yaml  tasks.yaml
python/crewai/sample_agent/src/crew_agent/tools/: custom_tool.py
python/google-adk/sample-agent/: .env.template  AGENT-CODE-WALKTHROUGH.md  README.md  agent.py  agent_interface.py  hosting.py  main.py  mcp_tool_registration_service.py  pyproject.toml
python/openai/sample-agent/: .env.template  AGENT-CODE-WALKTHROUGH.md  AGENT-TESTING.md  README.md  Sample Agent - OpenAI.md  agent.py  host_agent_server.py  local_authentication_options.py  pyproject.toml
scripts/: README.md  Test-Agent365Integration.ps1  assign_points.py  config_points.yml  track_points.py  update_leaderboard.py
utilities/: Set-AgentBlueprintPermissions.ps1  SetGrantAndInheritenceForAA.ps1  createAgentBlueprint.ps1
(+105 files in other folders)
