[project]
name = "sample-claude-agent"
version = "0.1.0"
description = "Sample Claude Agent using Microsoft Agent 365 SDK with MCP tooling support"
authors = [
    { name = "Microsoft", email = "support@microsoft.com" }
]
dependencies = [
    # Claude Agent SDK
    "claude-agent-sdk>=0.1.0",
    
    # Microsoft Agents SDK - Official packages for hosting and integration
    "microsoft-agents-hosting-aiohttp",
    "microsoft-agents-hosting-core",
    "microsoft-agents-authentication-msal",
    "microsoft-agents-activity",
    
    # Core dependencies
    "python-dotenv",
    "aiohttp",
    
    # Additional utilities
    "typing-extensions>=4.0.0",

    # Microsoft Agent 365 SDK packages
    "microsoft_agents_a365_tooling>=0.1.0",
    "microsoft_agents_a365_observability_core>=0.1.0",
    "microsoft_agents_a365_notifications>=0.1.0",
    "microsoft_agents_a365_runtime>=0.1.0",
    "wrapt>=2.0.1"
]
requires-python = ">=3.11"

# Package index configuration
# PyPI is the default/primary source, local packages are fallback
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "microsoft_agent365"
url = "../../../dist"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
